# BeLight

./: CMakeLists.txt  README.md  build.sh
include/: 3d.h  constants.hpp  mathematics.h  mathematics.hpp  objects.h  rasterizer.hpp  ray_tracer.hpp  ray_tracing.h  ray_tracing.hpp  renderer.h  renderer.hpp  renderer_sdl.h  simulation.h  simulation.hpp  text.hpp  types.hpp  ui.h
src/: main.cpp  mathematics.cpp  objects.cpp  rasterizer.cpp  renderer.cpp  renderer_sdl.cpp  simulation.cpp  stb_impl.cpp  text.cpp
